// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> render correctly when type is green 1`] = `
<div
  className="tag test green"
>
  android
</div>
`;

exports[`<Badge /> render correctly when type is orange 1`] = `
<div
  className="tag test orange"
>
  android
</div>
`;
